public/components/form/_form.css
@import './_form-button.css';

/*
checkbox
*/
.form-checkbox__input {
  @include formCheckbox(.form-checkbox__label);
}

.form-checkbox__label {
  @extend %form__label--checkbox;
  font-size: inherit;
  font-family: inherit;
}

/*
input
*/
%form-input {
   @extend %font-text-sans-3;
   box-sizing: border-box;
   display: block;
   background-color: #fff;
   border: 1px solid var(--color-border);
   color: #000;
   padding: 0 var(--size-baseline-gutter);
   line-height: 4.2rem;
   height: 4.2rem;
   border-radius: 99999px;
   width: 100%;
   transition: 0.15s;

   &:hover {
     border-color: var(--color-border-hover);
   }

   &:focus {
     border-color: color(var(--color-border-hover) lightness(-20%));
     outline: none;
   }
 }
.form-input {
  @extend %form-input;
  &.form-input__display-errors:invalid {
    border-color: var(--color-error);
    color: var(--color-error);
  }
}

/*
prelude
*/
%form__prelude {
   @extend %font-body-copy;
   margin: 0;
   padding: calc(var(--size-baseline-vertical)*0.75) 0;
   text-align: center;
   @supports (width: calc(100% + 1px)) {
     background: linear-gradient(
       to bottom,
       transparent calc(50% - .9px),
       var(--color-border) calc(50% - .9px),
       var(--color-border) calc(50%),
       transparent calc(50%)
     );
   }
   > * {
     background: var(--color-bg);
     padding: 0 0.1rem;
   }
 }
.form-prelude {
  @extend %form__prelude;
}

/*
generic input wrapper
*/
.form-field-wrap {
  margin: 0;
  padding: 0;
  border: 0;
}

.form-field-wrap + .form-field-wrap {
  margin-top: calc(var(--size-baseline) * 4);
}

.form-field-wrap > * {
  margin-bottom: var(--size-baseline);
}

.form-field-wrap > label {
  display: block;
}

.form-field-wrap > .form-button {
  @supports (box-sizing: border-box) {
    width: 100%;
    box-sizing: border-box;
  }
}

.form-field-wrap__title {
  @extend %font-body-copy;
}

.form-field-wrap__footer {
  @extend %font-body-copy-small;
  &,
  .link {
    color: var(--color-text);
  }
}

/*
feedback
*/
%form-feedback {
  @extend %font-body-copy;
  padding: 0 0 0 calc(var(--size-baseline) * 8);
  position: relative;
  &:before {
    content: '';
    background: transparent center center no-repeat;
    background-size: contain;
    width: calc(var(--size-baseline) * 6.5);
    height: calc(var(--size-baseline) * 6.5);
    position: absolute;
    left: 0;
    top: calc(var(--size-baseline) * -0.85);
  }
}

.form-feedback {
  @extend %form-feedback;
  a {
    @extend %link;
    color: currentColor;
    text-decoration-color: currentColor;
  }
}

.form-feedback--error {
  color: var(--color-error);
  &:before {
    background-image: inline('status-alert.svg');
  }
}

.form-feedback--info {
  color: var(--color-info);
  &:before {
    background-image: inline('status-info.svg');
  }
}

.form-feedback--bullet {
  &:before {
    background-image: inline('status-bullet.svg');
  }
}

.form-feedback-wrap {
  .form-feedback {
    margin: 0 0 var(--size-baseline-vertical) 0;
    .form-feedback__colourless {
      color: var(--color-text);
    }
    &:not(:first-child) {
      background: none;
    }
    &:last-child {
      margin: 0 0 var(--size-baseline-vertical) 0;
    }
  }
}

